class Terminal:
    """Current terminal configuration."""

    def __init__(self, admin_password: str):
        self.admin_password = admin_password
