classDiagram
    class Terminal {
        admin_password: String
    }

    class Prize {
        id: int
        name: String
        description: String
        type: String
        quantity_max: int
        all_tickets_generated: boolean
        /tickets_nbr: int
        /quantity_redeemed: int
        generate_tickets(number)
    }

    class Ticket {
        id: int
        code: String
        created_at: Date
        drawn_at: Date
        is_printed: boolean
        is_winning: boolean
        has_been_claimed: boolean
        draw()
    }

    class Customer {
        id: int
        firstname: String
        lastname: String
        phone_number: String
        email: String
        pin_code: String
        address: String
        add_ticket(ticket)
        claim_tickets(tickets_codes)
    }

    class Locality {
        id: int
        name: String
        postcode: int
    }

    class Province {
        id: int
        name: String
    }

    Ticket "*" <-- "1" Prize: contains
    Customer "1" --> "*" Ticket: has
    Province "1" --> "*" Locality: regroups
    Locality "1" <-- "*" Customer: lives in
